--- a/pom.xml
+++ b/pom.xml
@@ -407,6 +407,7 @@
 				<includes>
 					<include>**/*.properties</include>
 					<include>**/*.xml</include>
+					<include>**/*.ini</include>
 				</includes>
 				<filtering>true</filtering>
 			</resource>
