--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -62,25 +62,25 @@
 		</init-param>
 	</filter>
 
-	<!-- <filter> -->
-	<!-- <filter-name>shiroFilter</filter-name> -->
-	<!-- <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> -->
-	<!-- 该值缺省为false,表示生命周期由SpringApplicationContext管理,设置为true则表示由ServletContainer管理 -->
-	<!-- <init-param> -->
-	<!-- <param-name>targetFilterLifecycle</param-name> -->
-	<!-- <param-value>true</param-value> -->
-	<!-- </init-param> -->
-	<!-- </filter> -->
+	<filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		该值缺省为false,表示生命周期由SpringApplicationContext管理,设置为true则表示由ServletContainer管理
+		<init-param>
+			<param-name>targetFilterLifecycle</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
 
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<!-- <filter-mapping> -->
-	<!-- <filter-name>shiroFilter</filter-name> -->
-	<!-- <url-pattern>/*</url-pattern> -->
-	<!-- </filter-mapping> -->
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
